fixes #260